* May 28 2001 hship

Portal tutorial:
- Make the Slashdot page refresh its data every 30 seconds or so.
- Put together a more realistic Stocks portlet.
- Tweak the UI / CSS stuff a little.

* May 26 2001 hship

Initial work on Slashdot portlet.

* May 25 2001 hship

Check in start of the Portal tutorial.

* May 22 2001 hship

Update the tutorial specifications to the 1.1 DTD.

* May 22 2001 hship

Update the Vlib specifications to the 1.1 DTD.

* Feb 13 2001 hship

Deal with "enabled" -> "disabled" change in link component parameters.

* Feb 8 2001 hship

Remove code related to response writer compression (which has been removed from
IResponseWriter).
Configure Vlib to use the asset externalizer.

* Feb 6 2001 hship

Slight changes to Makefiles (due to variable name changes in JBE).

* Jan 30 2001 hship

Slight revision of VlibBeans Makefile (TAR variable was renamed to GNUTAR).

* Jan 26 2001 hship

Change the Publisher.script to make use of the new <let> tag.

* Jan 26 2001 hship

Update some Makefiles.

* Jan 25 2001 hship

Fix some bugs related to the Logout page and invalidting the HttpSession.

* Jan 24 2001 hship

Set JVM memory options when running jBoss for VlibBeans.

* Jan 23 2001 hship

Optimize VlibBeans for performance testing.
Remove the Inspector button from the Vlib border by default (it must be enabled).
Hide the "[Borrow]" button on the ViewBook page intead of disabling it.

* Jan 18 2001 hship

Update portions of the JSP Vlib to match the Tapestry Vlib.

* Jan 16 2001 hship

Make use of new ICallback classes with Vlib.
Update examples for changes to IDirectListener interface.

* Jan 10 2001 hship

VlibBeans: Install gnu-regexp.jar and log4j.jar as well as Tapestry.jar.
Vlib: Change NewBook and EditBook pages to use some magic scripting to enable/disable
the inputPropertyName field based on the selection in the publisher select.

* Jan 10 2001 hship

Fix the configure-jboss rule to depend on setup-jbe-util (not -utils).

* Jan 9 2001 hship
