@@ -1,10 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id$ -->
-<!DOCTYPE specification PUBLIC "-//Howard Ship//Tapestry Specification 1.1//EN"
-	"http://tapestry.sf.net/dtd/Tapestry_1_1.dtd">
-	
-<specification class="com.primix.tapestry.BasePage">
-
-<component id="content" type="Block"/>
-
-</specification>
